@@ -302,6 +302,18 @@ typedef struct
 
 typedef struct
 {
+	/* The maximum size of the fill. Calcualted from the entries allocation,
+	 * and other information. Relative to the drawn position.
+	 */
+	GdkRectangle max_size;
+	gboolean max_size_known;
+	/* The border around the bar. This can be used for radius calculations.
+	 */
+	GtkBorder border;
+} EntryProgressParameters;
+
+typedef struct
+{
 	ClearlooksArrowType type;
 	ClearlooksDirection direction;
 } ArrowParameters;
@@ -358,6 +370,12 @@ struct _ClearlooksStyleFunctions
 	void (*draw_entry)            (cairo_t *cr,
 	                               const ClearlooksColors *colors,
 	                               const WidgetParameters *widget,
+	                               int x, int y, int width, int height);
+
+	void (*draw_entry_progress)   (cairo_t *cr,
+	                               const ClearlooksColors *colors,
+	                               const WidgetParameters *widget,
+	                               const EntryProgressParameters *progress,
 	                               int x, int y, int width, int height);
 
 	void (*draw_spinbutton)       (cairo_t *cr,
